[project]
name = 'fast-zero'
version = '0.1.0'
description = ''
authors = [
    {name = 'João P. R. F. Sousa',email = 'jprfsousa@gmail.com'}
]
readme = 'README.md'
requires-python = '==3.13.*'
dependencies = [
    'fastapi[standard] (>=0.116.1,<0.117.0)'
]

[tool.poetry]
packages = [{include = 'fast_zero', from = 'src'}]

[tool.poetry.group.dev.dependencies]
ruff = '^0.12.7'
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev src/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'


[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'
